# Evidencia2

./: CMakeLists.txt  sonar-project.properties  team10
.github/workflows/: build.yml  ubuntu.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  funciones.cpp  funciones.h  functions.cpp
tests/: CMakeLists.txt  test.cpp
